<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.jorgesoasti.petagramfragments.ActivityContactos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/titulo_contacto"
        android:textSize="20sp"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtNombre"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/contact_nombre"
            android:layout_marginBottom="10dp">

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtCorreo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/contact_correo"
            android:layout_marginBottom="10dp">

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtMensaje"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/contact_mensaje"
            android:layout_marginBottom="10dp">

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_comentario"
        android:theme="@style/MiBotonRaised"
        android:layout_gravity="bottom"/>

</LinearLayout>
