<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.jorgesoasti.petagramfragments.Activities.ActivityBioDesarrollador">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/perfil_dev"
        app:civ_border_color="@color/colorLightPrimaryColor"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_radius="10"
        app:civ_shadow_color="@color/cardview_dark_background"
        android:layout_gravity="center"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desarrollador"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio1"
        android:textSize="18sp"
        android:layout_marginBottom="7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio2"
        android:textSize="18sp"
        android:layout_marginBottom="7dp"/>

</LinearLayout>
